2010-05-14  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/gis_maps/configure_gis_map.php: fixed the title of button to
	"update layer", and now by default the group of new layer is none.
	Fixes: #2990762

2010-05-14  Sergio Martin <sergio.martin@artica.es>

	* include/functions_db.php
	operation/agentes/ver_agente.php
	godmode/agentes/massive_edit_modules.php: Fixed the
	ACL check into groups combo for bug 3001500 and 
	All agents display for bug 2999431

2010-05-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/gettext.php: Sorry I forget part of changes in "fixed the bug of
	pseudo-gettext with diferent arquitectures. Now check the arquitecture
	before." 
	Fixes: #2991545
	
	* godmode/agentes/configurar_agente.php: fixed lost the require file.
	Fixes: #3000337

2010-05-13 Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/group_view.php: Clean code. Close tags. Now, if 
	there's no agent, it shows a text. Inefficient?

	* godmode/agentes/agent_manager: Solved typo with .png files, but
	those files doesn't exists in repository...

2010-05-13 Raúl Mateos <raulofpandora@gmail.com>

	* install.php: Updated year. Clean code.

2010-05-13  Sergio Martin <sergio.martin@artica.es>

	* godmode/gis_maps/configure_gis_map.php: Fixed the 
	Gis map without map connection. Now is impossible 
	to create or update a GIS map without map connection
	Bug: 3000014

2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* include/gettext.php: fixed the bug of pseudo-gettext with diferent
	arquitectures. Now check the arquitecture before. 
	Fixes: #2991545

2010-05-13  Miguel de Dios  <miguel.dedios@artica.es>

	* pandoradb.sql: fixed the syntax of sql for compatibility of mysql 5.0 that
	this versión is used in Debian Lenny for example. Now run in 5.0 and next
	versións.

2010-05-13  Sergio Martin <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed negative timestamp 
	for bug: 2926876

2010-05-13  Sergio Martin <sergio.martin@artica.es>
