@@ -1,3 +1,10 @@
+2010-05-14  Sergio Martin <sergio.martin@artica.es>
+
+	* godmode/reporting/visual_console_builder.php: Fixed
+	the adding at visual map only the agent if module is 
+	no selected and only the module if is selected.
+	Bug: 2989339
+
 2010-05-14  Miguel de Dios  <miguel.dedios@artica.es>
 
 	* godmode/gis_maps/configure_gis_map.php: fixed the title of button to
